syntax = "proto3";

package api;

option go_package = "./pb/shop_pb;shop";

service ShopService {
  rpc PlaceOrder(PlaceOrderReq) returns (PlaceOrderResp) {}
  rpc ListOrder(ListOrderReq) returns (ListOrderResp) {}
  rpc MarkOrderPaid(MarkOrderPaidReq) returns (MarkOrderPaidResp) {}
}

message PlaceOrderReq {
  int64 user_id = 1;
  string name = 2;
  string email = 3;
  string address = 4;
  float amount = 5;
  repeated OrderItem order_items = 6;
}

message OrderItem {
  uint32 product_id = 1;
  int32  quantity = 2;
  float cost = 3;
}

message PlaceOrderResp {
  string order_id = 1;
}

message ListOrderReq {
  int64 user_id = 1;
}

message Order {
  repeated OrderItem order_items = 1;
  string order_id = 2;
}

message ListOrderResp {
  repeated Order orders = 1;
}

message MarkOrderPaidReq {
  int64 user_id = 1;
  string order_id = 2;
}

message MarkOrderPaidResp {}